# gooroom-battery-plugin

./: README  configure.ac.in
debian/: changelog  control  copyright  rules
icons/scalable/apps/: Makefile.am
panel-plugin/: Makefile.am  battery-plugin.c  battery-plugin.desktop.in.in  battery-plugin.h  xfpm-icons.h  xfpm-power-common.c  xfpm-power-common.h
po/: POTFILES.in  POTFILES.skip  en_US.po  ko.po
